# fantasy-don-api

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml  refetch.json  response.json  response2.json  response3.json  response4.json  response5.json  response_final.json  test_2025.json
docs/: AVAILABLE_METRICS.md  DIRECTORY_STRUCTURE.md  INSIGHTS_COMPARISONS.md  INSIGHTS_ENGINE.md  data-fetcher-documentation.md
infrastructure/: fantasy_don_stack.py
lambda_functions/api/: index.py  utils.py
lambda_functions/data_fetcher/: Dockerfile  Dockerfile 2  index.py  requirements.txt  utils 2.py  utils.py  validation.py
lambda_functions/data_fetcher/numpy-2.2.6.dist-info/: RECORD
lambda_functions/data_validator/: Dockerfile  index.py  requirements.txt  schema.py  validators.py
lambda_functions/insights_engine/: Dockerfile  index.py  models.py  persistence.py
lambda_functions/insights_engine/calculators/: defense_insights.py  player_insights.py  superlatives.py  team_insights.py
layers/nfl_data_layer/python/cramjam-2.11.0.dist-info/: RECORD
layers/nfl_data_layer/python/fastparquet-2024.11.0.dist-info/: RECORD
scripts/: README.md  check-runs  check_scheduled_runs.py  generate_all_combinations.py
scripts/test-insights/: README.md  test_insights_local.py
tests/: test_api_s3_queries.py  test_data_fetcher.py  test_s3_operations.py
